# kanban

./: .gitignore  Cargo.toml  components.json  index.html  package-lock.json  package.json  repomix.config.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: advisor.rs  engine.rs  explainer.rs  lib.rs  llm_client.rs  scorer.rs  solver.rs  types.rs
crates/ai-engine/src/solver/: milp.rs  mod.rs
crates/ai-engine/tests/: advisor.rs  engine.rs  explainer.rs  milp.rs  scorer.rs  solver.rs
crates/app/: Cargo.toml
crates/app/src/: command.rs  crypto.rs  error.rs  lib.rs  state.rs
crates/app/src/service/: allocations.rs  calendar.rs  catalog.rs  dates.rs  mod.rs  occupancy.rs  optimization.rs  projects.rs  reports.rs  resources.rs  settings.rs  tasks.rs  teams.rs  thresholds.rs  workload.rs
crates/app/tests/: allocations.rs  calendar.rs  catalog.rs  deps.rs  encryption.rs  error_mapping.rs  occupancy.rs  optimization.rs  optimization_milp.rs  projects.rs  reports.rs  resources.rs  settings.rs  smoke_kanban.rs  tasks.rs  teams.rs  thresholds.rs  workload.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql  0002_settings_thresholds.sql  0003_rename_score_utilization.sql  0004_drop_dead_allocated_pd.sql  0005_separate_embed_config.sql  0006_add_llm_feature_flags.sql  0007_configurable_llm_prompt.sql  0008_optimization_suggestions.sql
crates/db/src/: error.rs  lib.rs  models.rs  pool.rs  tx.rs
crates/db/src/repo/: allocations.rs  calendar.rs  gantt.rs  mod.rs  projects.rs  resources.rs  settings.rs  skills.rs  tags.rs  tasks.rs  teams.rs
crates/db/tests/: allocations_repo.rs  calendar.rs  gantt.rs  migration.rs  pool.rs  resources_repo.rs  trigger.rs  tx.rs
crates/domain/: Cargo.toml
crates/domain/src/: calendar.rs  error.rs  lib.rs  types.rs  unit.rs  workload.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs  state.rs
crates/server/src/routes/: allocations.rs  calendar.rs  catalog.rs  gantt.rs  mod.rs  optimization.rs  projects.rs  reports.rs  resources.rs  settings.rs  tasks.rs  teams.rs  workload.rs
docs/design/: 2026-06-27-hr-kanban-design.md
docs/superpowers/plans/: 2026-06-27-hr-kanban-phase0-foundation.md  2026-06-27-hr-kanban-phase1-backend.md  2026-06-27-hr-kanban-phase1b-frontend.md  2026-06-27-hr-kanban-phase2-backend.md  2026-06-27-hr-kanban-phase2b-frontend.md  2026-06-27-hr-kanban-phase3-backend.md  2026-06-27-hr-kanban-phase3b-frontend.md  2026-06-27-hr-kanban-phase4-ai-engine.md  2026-06-27-hr-kanban-phase4b-ai-panel.md  2026-06-27-hr-kanban-phase5-reports.md  2026-06-27-hr-kanban-phase6-polish.md  2026-07-01-llm-suggestion-compare.md  2026-07-01-shadcn-admin-stage0-1.md  2026-07-01-shadcn-admin-stage2-routing.md  2026-07-01-shadcn-admin-stage3a-data-layer.md  2026-07-01-shadcn-admin-stage3b-page-migration-plan.md
docs/superpowers/specs/: 2026-07-01-llm-suggestion-compare-design.md  2026-07-01-shadcn-admin-stage0-1-design.md  2026-07-01-shadcn-admin-stage2-routing-design.md  2026-07-01-shadcn-admin-stage3a-data-layer-design.md  2026-07-01-shadcn-admin-stage3b-page-migration-design.md
src/: App.vue  main.ts  router.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands_extra.rs  main.rs
src/api/: index.test.ts  index.ts
src/components/: AllocationForm.vue  AppLayout.vue  DateRangePicker.vue  GanttTimeline.vue  HolidayList.vue  KanbanColumn.vue  OccupancyGrid.vue  PlanCompare.vue  PlanReview.vue  ProjectForm.vue  ResourceForm.vue  TaskCard.vue  TaskForm.vue  TimeOffList.vue  UtilBar.vue  WeightsPanel.vue  WorkWeekEditor.vue  no-result-found.vue  toggle-theme.vue
src/components/app-sidebar/: index.vue
src/components/command-menu-panel/: command-change-theme.vue  command-item-has-icon.vue  command-to-page.vue  index.vue
src/components/custom-theme/: content-layout.vue  custom-color.vue  custom-radius.vue  menu-style.vue  theme-popover.vue  toggle-color-mode.vue
src/components/data-table/: bulk-actions.vue  column-header.vue  data-table.vue  faceted-filter.vue  index.ts  radio-cell.vue  table-columns.ts  table-loading.vue  table-pagination.vue  types.ts  use-generate-vue-table.ts  view-options.vue
src/components/global-layout/: two-col-aside.vue
src/components/list/: ListPage.vue  ListRowActions.vue  ListToolbar.vue
src/composables/: use-app-nav.ts  use-system-theme.ts
src/constants/: pagination.ts  themes.ts
src/layouts/: default.vue
src/lib/: utils.ts
src/pages/ai/: index.vue
src/pages/allocations/: index.vue
src/pages/calendar/: index.vue
src/pages/calendar-grid/: index.vue
src/pages/catalog/: index.vue
src/pages/dashboard/: index.vue
src/pages/gantt/: index.vue
src/pages/kanban/: index.vue
src/pages/projects/: index.vue
src/pages/reports/: index.vue
src/pages/resources/: index.vue
src/pages/settings/: index.vue
src/pages/teams/: index.vue
src/plugins/: index.ts
src/plugins/auto-animate/: setup.ts
src/plugins/i18n/: en.json  index.ts  setup.ts  zh.json
src/plugins/nprogress/: setup.ts
src/plugins/pinia/: setup.ts
src/plugins/router/: setup.ts
src/plugins/tanstack-vue-query/: setup.ts
src/router/: index.ts  redirect.test.ts
src/router/guard/: common-guard.ts  index.ts
src/services/: fetch.ts
src/services/api/: allocations.api.ts  (+12 more)
src/stores/: allocations.ts  calendar.ts  catalog.ts  gantt.test.ts  gantt.ts  optimization.test.ts  optimization.ts  projects.ts  refresh.test.ts  refresh.ts  resources.ts  settings.ts  sidebar-config.ts  tasks.test.ts  tasks.ts  teams.ts  theme.ts  unit.ts  workload.test.ts  workload.ts
src/styles/: themes.css
src/types/: auto-import-components.d.ts  auto-import.d.ts  route-map.d.ts
src/utils/: date.ts  env.ts
src/views/: AiPanelView.vue  AllocationsView.vue  CalendarGridView.vue  CalendarView.vue  CatalogView.vue  DashboardView.vue  FirstRun.vue  GanttView.vue  KanbanView.vue  ProjectsView.vue  ReportsView.vue  ResourcesView.vue  SettingsView.vue  TeamsView.vue
(+26 files in other folders)
