[workspace]
resolver = "2"
members = ["crates/domain", "crates/db", "crates/app", "crates/server", "crates/ai-engine", "src-tauri"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock"], default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
