[package]
name = "kanban"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
server = { path = "../crates/server" }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Opt-in features forwarded through `server` → `app` → `ai-engine`. Off by default so the
# desktop build stays deterministic and free of the HiGHS C++ build dependency unless opted in.
llm = ["server/llm"]
milp = ["server/milp"]
pdf = ["server/pdf"]
