[package]
name = "ai-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }

[features]
default = []
llm = ["rig-core"]
milp = ["good_lp"]

# Production impls (behind features). Version caveat (plan Task 1): rig-core ≈0.24.x
# and good_lp = 1 + highs; the deterministic core builds without these.
[dependencies.rig-core]
version = "0.24"
optional = true

[dependencies.good_lp]
version = "1"
optional = true
default-features = false
features = ["highs"]
