[package]
name = "ai-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }

[features]
default = []
llm = ["rig"]

# Production impls (behind features). The package is `rig-core` but its lib is `rig`
# (verified against the locked 0.36 source: package name "rig-core", lib name "rig").
# Plan assumed rig 0.24; the actual resolved version is 0.36 with a substantially
# different API (generic Client<OllamaExt>, embed_text, AgentBuilder, Prompt returns String).
[dependencies.rig]
version = "0.36"
optional = true
package = "rig-core"
