[package]
name = "ai-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true }

[features]
default = []
llm = ["rig"]
# Exact MILP solver (good_lp modeler + HiGHS backend). The binary generalized-assignment
# model in solver::milp needs only linear constraints + binary vars; HiGHS supports both
# and is statically linked (no runtime lib on Linux; needs a C/C++ toolchain at build).
# default-features=false drops coin_cbc (which requires a separate Cbc install).
milp = ["dep:good_lp"]

# Production impls (behind features). The package is `rig-core` but its lib is `rig`
# (verified against the locked 0.36 source: package name "rig-core", lib name "rig").
# Plan assumed rig 0.24; the actual resolved version is 0.36 with a substantially
# different API (generic Client<OllamaExt>, embed_text, AgentBuilder, Prompt returns String).
[dependencies.rig]
version = "0.36"
optional = true
package = "rig-core"

# good_lp is a MILP *modeler* (not a solver); it forwards to a backend crate. We pin the
# `highs` backend (best open-source MIP solver, MIT, multi-core, statically linked via the
# `highs` crate which vendors HiGHS source). HighsProblem implements SolverModel and is Send,
# so it is safe to drive from tokio::task::spawn_blocking in the app layer.
# API surface relied on: variables!/ProblemVariables::add, constraint!, .maximise(..).using(highs),
# HighsProblem::{set_time_limit, set_threads}, Solution::value. (docs.rs good_lp 1.8.x.)
[dependencies.good_lp]
version = "1"
default-features = false
features = ["highs"]
optional = true
