[package]
name = "app"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
tauri = { version = "2", default-features = false, features = ["wry"] }

[dev-dependencies]
tokio = { workspace = true }
serde_json = "1"