[package]
name = "app"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
ai-engine = { path = "../ai-engine" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
csv = "1"
rust_xlsxwriter = "0.79"
# PDF generator (pure-Rust printpdf 0.7, no Chromium). Optional behind the 'pdf' feature.
printpdf = { version = "0.7", default-features = false, optional = true }

[features]
default = []
pdf = ["dep:printpdf"]
# Forward to ai-engine's `llm` feature so `SemanticScorer`/`LlmExplainer` compile in when
# the app is built with `--features llm` (opt-in semantic matching via local Ollama).
llm = ["ai-engine/llm"]
# Forward to ai-engine's `milp` feature so `MilpSolver` (good_lp + HiGHS) compiles in when
# the app is built with `--features milp` (opt-in exact MILP optimization).
milp = ["ai-engine/milp"]

[dev-dependencies]
tokio = { workspace = true }
serde_json = "1"