[package]
name = "db"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"]

[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]

[dev-dependencies]
tokio = { workspace = true }