[package]
name = "db"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
chrono = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"]

[dependencies.libsqlite3-sys]
version = "0.30"
features = ["bundled-sqlcipher-vendored-openssl"]

[dev-dependencies]
tokio = { workspace = true }
