[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
app = { path = "../app" }
db = { path = "../db" }
domain = { path = "../domain" }

axum = "0.8"
chrono = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true }
