[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
app = { path = "../app" }
db = { path = "../db" }
domain = { path = "../domain" }
ai-engine = { path = "../ai-engine" }

axum = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
# Opt-in features forwarded to `app` (and through to ai-engine). The shipped server binary
# is deterministic by default (greedy solver, keyword scorer, template explainer, no PDF).
llm = ["app/llm"]
milp = ["app/milp"]
pdf = ["app/pdf"]
